src/objects/Days_part__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>End__c</fullName>
        <description>End time</description>
        <inlineHelpText>End time</inlineHelpText>
        <label>End</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Separation__c</fullName>
        <description>separation</description>
        <inlineHelpText>separation</inlineHelpText>
        <label>Separation</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start__c</fullName>
        <description>Start time</description>
        <inlineHelpText>Start time</inlineHelpText>
        <label>Start</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Part of the day</label>
</CustomObject>